# Beyond-Game-Engine

./: .clang-tidy  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt  lgtm.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
Engine/: CMakeLists.txt
Engine/core/: CMakeLists.txt
Engine/core/include/beyond/core/concurrency/: task_queue.hpp
Engine/core/include/beyond/core/container/: static_vector.hpp
Engine/core/include/beyond/core/containers/: array_view.hpp
Engine/core/include/beyond/core/ecs/: entity.hpp  handle.hpp  sparse_map.hpp  sparse_set.hpp
Engine/core/include/beyond/core/math/: angle.hpp  constants.hpp  function.hpp  math.hpp  vector.hpp
Engine/core/include/beyond/core/resource/: handle.hpp
Engine/core/include/beyond/core/utils/: arrow_proxy.hpp  assert.hpp  bit_cast.hpp  crtp.hpp  expected.hpp  function_ref.hpp  functional.hpp  handle.hpp  named_type.hpp  panic.hpp  type_traits.hpp
Engine/core/include/core/: arrow_proxy.hpp  assert.hpp  bit_cast.hpp  crtp.hpp  type_traits.hpp
Engine/core/include/core/ecs/: sparse_map.hpp  sparse_set.hpp
Engine/core/include/core/math/: angle.hpp  constants.hpp  math.hpp  vector.hpp
Engine/core/src/: panic.cpp
Engine/core/src/math/: vector.cpp
Engine/core/src/utils/: panic.cpp
Engine/core/test/: .clang-tidy  CMakeLists.txt  angle_test.cpp  math_test.cpp  named_type_test.cpp  slot_map_test.cpp  sparse_map_test.cpp  sparse_set_test.cpp  vector_test.cpp
Engine/core/test/concurrency/: task_queue_test.cpp  task_system_test.cpp
Engine/core/test/container/: slot_map_test.cpp  static_vector_test.cpp
Engine/core/test/containers/: array_view_test.cpp
Engine/core/test/ecs/: entity_test.cpp  handle_test.cpp  sparse_map_test.cpp  sparse_set_test.cpp
Engine/core/test/math/: angle_test.cpp  functions_test.cpp  vector_test.cpp
Engine/core/test/resource/: handle.cpp
Engine/core/test/utils/: expected_test.cpp  function_ref_test.cpp  functional_test.cpp  handle_test.cpp  named_type_test.cpp
Engine/graphics/: CMakeLists.txt  main.cpp
Engine/graphics/d3d12/: CMakeLists.txt
Engine/graphics/d3d12/include/beyond/d3d12/: d3d12_interface.hpp
Engine/graphics/d3d12/src/: d3d12_context.cpp  d3d12_device.cpp  d3d12_device.hpp
Engine/graphics/include/beyond/graphics/: backend.hpp  graphics_backend.hpp  unique_handles.hpp
Engine/graphics/src/: backend.cpp
Engine/graphics/test/: CMakeLists.txt  main.cpp
Engine/graphics/test/backend/: mapping_ptr_test.cpp  mapping_test.cpp  mock_backend.hpp  mock_gpu_device.hpp
Engine/graphics/vulkan/: .clang-tidy  CMakeLists.txt  vulkan_backend.cpp  vulkan_context.cpp  vulkan_context.hpp
Engine/graphics/vulkan/include/beyond/vulkan/: vulkan_fwd.hpp
Engine/graphics/vulkan/src/: vma_impl.cpp  vulkan_buffer.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_gpu_device.cpp  vulkan_gpu_device.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_queue_indices.cpp  vulkan_queue_indices.hpp  vulkan_shader_module.cpp  vulkan_shader_module.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utils.hpp
Engine/platform/: CMakeLists.txt  main.cpp
Engine/platform/include/beyond/platform/: platform.hpp
Engine/platform/src/: glfw_platform_impl.cpp
cmake/: compiler.cmake  doxygen.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt
examples/gpu_device/: CMakeLists.txt
examples/gpu_device/simple_compute/: CMakeLists.txt  main.cpp
examples/gpu_device/triangle/: CMakeLists.txt  main.cpp
shaders/: copy.comp
